--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+Vala 0.38.6
+===========
+ * Various bug fixes:
+  - girparser:
+    + Set NoAccessorMethod for non-readable and construct-only properties
+    + Ignore conflicting closure/destroy indexes
+    + Don't accept methods as property-accessor which throw errors [#792998]
+  - codegen:
+    + Infer error parameter from abstract/virtual base methods [#614294]
+    + Fix return-type for cancelled async creation methods of classes [#792942]
+  - vala: Variadic constructors without a real first parameter are not allowed
+  - libvaladoc: Keep bootstrap-support with valac >= 0.16.1
+
+ * Bindings:
+  - gstreamer-1.0: Update from 1.13+ git master
+  - gtk+-4.0: Only override type of "event" parameters
+
 Vala 0.38.5
 ===========
  * Various improvements and bug fixes:
